[package]
name = "iedup"
version = "1.0.0"
authors = ["Mickaël Leduque <mleduque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap", tag = "v3.0.0-beta.2" }
anyhow = "1.0"
once_cell = "1.7.2"
ansi_term = "0.12"
glob = "0.3.0"
